--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ anthropic==0.22.1
     # via omnixy (pyproject.toml)
 anyio==4.8.0
     # via
+    #   anthropic
     #   httpx
     #   openai
-    #   anthropic
 async-timeout==5.0.1
-    # via aiohttp
+    # via
+    #   aiohttp
+    #   redis
 attrs==25.1.0
     # via aiohttp
 cachetools==5.5.2
@@ -35,7 +37,9 @@ cohere==5.13.12
 cryptography==44.0.1
     # via omnixy (pyproject.toml)
 distro==1.9.0
-    # via openai
+    # via
+    #   anthropic
+    #   openai
 exceptiongroup==1.2.2
     # via anyio
 fastavro==1.10.0
@@ -88,6 +92,7 @@ httplib2==0.22.0
     #   google-auth-httplib2
 httpx==0.28.1
     # via
+    #   anthropic
     #   cohere
     #   openai
 httpx-sse==0.4.0
@@ -139,6 +144,7 @@ pycparser==2.22
 pydantic==2.10.6
     # via
     #   omnixy (pyproject.toml)
+    #   anthropic
     #   cohere
     #   google-generativeai
     #   openai
@@ -152,6 +158,8 @@ python-dotenv==1.0.1
     # via omnixy (pyproject.toml)
 pyyaml==6.0.2
     # via huggingface-hub
+redis==5.2.1
+    # via omnixy (pyproject.toml)
 requests==2.32.3
     # via
     #   omnixy (pyproject.toml)
@@ -162,10 +170,13 @@ rsa==4.9
     # via google-auth
 sniffio==1.3.1
     # via
+    #   anthropic
     #   anyio
     #   openai
 tokenizers==0.21.0
-    # via cohere
+    # via
+    #   anthropic
+    #   cohere
 tqdm==4.67.1
     # via
     #   google-generativeai
@@ -175,6 +186,7 @@ types-requests==2.32.0.20241016
     # via cohere
 typing-extensions==4.12.2
     # via
+    #   anthropic
     #   anyio
     #   cohere
     #   google-generativeai
